objects/Integration_SDT__c.object
<CustomObject>
    <fields>
        <fullName>End_Point__c</fullName>
        <description>End point URL for web service.</description>
        <label>End Point</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <description>Request Header for SDT Service</description>
        <label>Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Password for web service login.</description>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Username for web service login.</description>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>